--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,6 +1,7 @@
-<h1>Welcome to the Hotel California!!</h1>
+<div class="text-center">
+  <h1>Welcome to the Hotel California!!</h1>
+</div>
 
-<p>Such a lovely place...</p>
-
-<%= link_to "Our rooms", rooms_path %>
-<%= link_to "Our reviews", reviews_path %>
+<div class="text-center">
+  <p>Such a lovely place...</p>
+</div>
