--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,9 +1,10 @@
-<div id="<%= dom_id review %>">
+<div class="row reviews-wrap">
+  <div id="<%= dom_id review %>">
   <p>
     <%= "Name : #{review.name}" %>
   </p>
   <p>
     <%= "Comment : #{review.comment}" %>
   </p>
-  <hr/>
+  </div>
 </div>
