--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,8 +1,8 @@
+<div class="text-center">
+  <h1>Book the room</h1>
+</div>
+
 <p style="color: green"><%= notice %></p>
 
 <%= render "rooms/room", obj: @room %>
 <%= render "form" %>
-
-<div>
-  <%= link_to "Back to rooms", rooms_path %>
-</div>
