--- a/app/views/admin/bookings/_booking.html.erb
+++ b/app/views/admin/bookings/_booking.html.erb
@@ -1,3 +1,4 @@
+<div class="row bookings-wrap">
 <div id="<%= dom_id booking %>">
   <p>
     <%= "Name : #{booking.name}" %>
@@ -12,7 +13,7 @@
     <%= "Booking end : #{booking.end_date}" %>
   </p>
   <p>
-    <%= "Approved : #{booking.approved}" %>
+    <%= "Approved : #{booking.approved? ? "true" : "false"}" %>
   </p>
   <p>
     <%= "Room : #{booking.room_id}" %>
@@ -21,5 +22,5 @@
     <%= button_to "Approve booking", admin_booking_path(booking), method: :patch %>
   <% end %>
   <%= button_to "Delete booking", admin_booking_path(booking), method: :delete %>
-  <hr/>
+</div>
 </div>
