--- a/app/views/admin/bookings/index.html.erb
+++ b/app/views/admin/bookings/index.html.erb
@@ -1,9 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Admin's bookings page</h1>
+<div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem;">
+  <h1>Admin's bookings page</h1>
+</div>
 
-<div id="bookings">
+<div id="bookings" class="wrap col-xs-8 col-xs-offset-2">
   <% @bookings.each do |booking| %>
     <%= render booking %>
+    <hr style="margin: 0"/>
   <% end %>
 </div>
