--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,20 +1,37 @@
-<%= form_with(model: Review.new) do |form| %>
-  <div>
-    <%= form.label :name %>
-    <%= form.text_field :name, placeholder: "Enter your name" %>
-  </div>
 
-  <div>
-    <%= form.label :email %>
-    <%= form.text_field :email, placeholder: "Enter your email" %>
-  </div>
+  <div class="col-xs-12"  id="form">
+    <%= form_with(model: Review.new, :html => {class: "form-horizontal", role: "form"}) do |form| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= form.label :name %>
+        </div>
+        <div class="col-sm-6">
+          <%= form.text_field :name, class: "form-control", placeholder: "Enter your name" %>
+        </div>
+      </div>
 
-  <div>
-    <%= form.label :comment %>
-    <%= form.text_area :comment, placeholder: "Enter your comment" %>
-  </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= form.label :email %>
+        </div>
+        <div class="col-sm-6">
+          <%= form.text_field :email, class: "form-control", placeholder: "Enter your email" %>
+        </div>
+      </div>
 
-  <div>
-    <%= form.submit %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= form.label :comment %>
+        </div>
+        <div class="col-sm-6">
+          <%= form.text_field :comment, class: "form-control", placeholder: "Enter your comment" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= form.submit %>
+        </div>
+      </div>
+    <% end %>
   </div>
-<% end %>
