--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,13 +1,19 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Reviews</h1>
+<div class="row">
+  <div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem;">
+    <h1>Reviews</h1>
+    <h2>Write your own review!</h2>
+  </div>
 
-<h2>Write your own review!</h2>
+  <div>
+    <%= render "form" %>
+  </div>
+</div>
 
-<%= render "form" %>
-
-<div id="reviews">
+<div id="reviews" class="wrap col-xs-8 col-xs-offset-2">
   <% @reviews.each do |review| %>
     <%= render review %>
+    <hr style="margin: 0"/>
   <% end %>
 </div>
