--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -1,3 +1,4 @@
+<div class="row rooms-wrap">
 <div id="<%= dom_id obj %>">
   <p>
     <%= "Name : #{obj.name}" %>
@@ -13,4 +14,5 @@
     <% end %>
   </p>
   <%= link_to "Book the room", room if defined? room %>
+</div>
 </div>
