--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,10 +1,12 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Rooms</h1>
+<div class="row text-center wrap col-xs-4 col-xs-offset-4" style="padding: 1rem;">
+  <h1>Rooms</h1>
+</div>
 
-<div id="rooms">
+<div id="rooms" class="wrap col-xs-8 col-xs-offset-2">
   <% @rooms.each do |room| %>
     <%= render room, obj: room %>
-    <hr/>
+    <hr style="margin: 0"/>
   <% end %>
 </div>
