added active storage, active job & sidekiq, some js and styles. fixed some bugs

--- a/app/views/admin/reviews/index.html.erb
+++ b/app/views/admin/reviews/index.html.erb
@@ -10,3 +10,7 @@
     <hr style="margin: 0"/>
   <% end %>
 </div>
+
+<div class="col-xs-8 col-xs-offset-2 digg_pagination">
+  <%= will_paginate @reviews %>
+</div>
