--- a/app/views/admin/rooms/_form.html.erb
+++ b/app/views/admin/rooms/_form.html.erb
@@ -31,6 +31,15 @@
       </div>
 
       <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= form.label :images %>
+        </div>
+        <div class="col-sm-6">
+          <%= form.file_field :images, multiple: true, direct_upload: true %>
+        </div>
+      </div>
+
+      <div class="form-group">
         <div class="col-sm-offset-2 col-sm-10">
           <%= form.submit %>
         </div>
