--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -4,7 +4,7 @@
     <%= "Name : #{obj.name}" %>
   </p>
   <p>
-    <%= "Cost : #{obj.cost}" %>
+    Cost : <span id="cost"><%= "#{obj.cost}" %></span>
   </p>
   <p>
     <% if defined? room %>
