--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,8 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
+    <%= javascript_pack_tag "application", "data-turbo-track": "reload", defer: true %>
+    <%= javascript_pack_tag "email_validator", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
