--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,7 @@
-<div class="text-center">
+<div class="row text-center wrap col-xs-4 col-xs-offset-4" style="padding: 1rem;">
   <h1>Welcome to the Hotel California!!</h1>
 </div>
 
-<div class="text-center">
+<div class="row text-center wrap col-xs-4 col-xs-offset-4" style="padding: 1rem; margin-top: 2rem;">
   <p>Such a lovely place...</p>
 </div>
