--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -1,8 +1,10 @@
-<div class="text-center">
+<div class="row text-center wrap col-xs-4 col-xs-offset-4" style="padding: 1rem;">
   <h1>Book the room</h1>
 </div>
 
 <p style="color: green"><%= notice %></p>
 
-<%= render "rooms/room", obj: @room %>
+<div class="wrap col-xs-8 col-xs-offset-2" style="margin-top: 2rem; margin-bottom: 2rem;">
+  <%= render "rooms/room", obj: @room %>
+</div>
 <%= render "form" %>
