--- a/app/views/admin/rooms/edit.html.erb
+++ b/app/views/admin/rooms/edit.html.erb
@@ -1,9 +1,11 @@
 <div class="row">
-  <div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem;">
+  <div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem; margin-bottom: 2rem;">
     <h1>Edit room</h1>
   </div>
 
-  <div class="row col-xs-8 col-xs-offset-2" style="margin-top: 2rem;">
+  <%= render 'shared/errors', obj: @room if defined? @room %>
+
+  <div class="row col-xs-8 col-xs-offset-2">
     <%= render "form" %>
   </div>
 </div>
