--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -53,7 +53,7 @@ $navbar-default-bg: black;
   box-shadow: 2px 3px 9px #AAAAAA;
 }
 #form {
-  margin: 2rem;
+  margin-bottom: 2rem;
 }
 .reviews-wrap {
   padding: 2rem;
@@ -137,4 +137,72 @@ body {
   overflow: hidden; }
 #disabled {
   pointer-events: none;
+}
+.img-link {
+  display: inline;
+  background-color: white;
+}
+.carousel {
+  position: relative;
+  padding: 10px 40px;
+  border: 1px solid #CCC;
+  border-radius: 15px;
+  background: #eee;
+}
+
+.carousel img {
+  /* делаем этот элемент блочным, чтобы убрать лишнее пространство вокруг картинок */
+  display: block;
+}
+
+.arrow {
+  position: absolute;
+  top: 60px;
+  padding: 0;
+  background: #ddd;
+  border-radius: 15px;
+  border: 1px solid gray;
+  font-size: 24px;
+  line-height: 24px;
+  color: #444;
+  display: block;
+}
+
+.arrow:focus {
+  outline: none;
+}
+
+.arrow:hover {
+  background: #ccc;
+  cursor: pointer;
+}
+
+.prev {
+  left: 7px;
+}
+
+.next {
+  right: 7px;
+}
+
+.gallery {
+  overflow: hidden;
+}
+
+.gallery ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  transition: margin-left 250ms;
+  /* удаляем пустое пространство между элементами li, у которых установлен inline-block */
+  /* http://davidwalsh.name/remove-whitespace-inline-block */
+  font-size: 0;
+}
+
+.gallery li {
+  display: inline-block;
+}
+
+label {
+  background-color: white;
 }
