--- a/app/views/admin/reviews/index.html.erb
+++ b/app/views/admin/reviews/index.html.erb
@@ -1,4 +1,4 @@
-<p style="color: green"><%= notice %></p>
+<%= javascript_pack_tag "review_email_validator", "data-turbo-track": "reload", defer: true %>
 
 <div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem;">
   <h1>Admin's reviews page</h1>
