--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -5,3 +5,9 @@
 <div class="row text-center wrap col-xs-4 col-xs-offset-4" style="padding: 1rem; margin-top: 2rem;">
   <p>Such a lovely place...</p>
 </div>
+
+<div class="row text-center wrap col-xs-4 col-xs-offset-4" style="padding: 1rem; margin-top: 2rem; margin-bottom: 2rem;">
+  <h2>Our photos</h2>
+</div>
+
+<%= render "shared/carousel", obj: @random_images %>
