--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,10 +1,10 @@
-<p style="color: green"><%= notice %></p>
-
 <div class="row">
-  <div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem;">
+  <div class="row text-center wrap col-xs-4 col-xs-offset-4"  style="padding: 2rem; margin-bottom: 2rem;">
     <h1>Reviews</h1>
     <h2>Write your own review!</h2>
   </div>
+
+  <%= render 'shared/errors', obj: @review if defined? @review %>
 
   <div>
     <%= render "form" %>
