--- a/app/views/shared/_basic_navigation.html.erb
+++ b/app/views/shared/_basic_navigation.html.erb
@@ -14,6 +14,9 @@
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
+        <% if current_user %>
+          <li><%= link_to "Admin's rooms", admin_rooms_path %></li>
+        <% end %>
         <li><%= link_to "Log in as admin", new_user_session_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
