added devise views and route testing

--- a/app/views/rooms/_room.html.erb
+++ b/app/views/rooms/_room.html.erb
@@ -15,7 +15,7 @@
       <%= obj.description %>
     <% end %>
   </p>
-  <%= link_to "Book the room", controller: "bookings", action: "new", room_id: room if defined? room %>
+  <%= link_to "Book the room", controller: "bookings", action: "new", room_id: room.id if defined? room %>
 </div>
   </div>
 </div>
