--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="form">
   <div class="col-xs-12">
-    <%= form_with(url: "/booking/new/#{@room.id}", :html => {class: "form-horizontal", role: "form"}) do |form| %>
+    <%= form_with(url: "/booking/new", :html => {class: "form-horizontal", role: "form"}) do |form| %>
       <div class="form-group">
         <div class="control-label col-sm-2">
           <%= form.label :name %>
